--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
