--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "start": "node src/server.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "pg": "^8.16.3",
